website/versioned_docs/version-2.6.x/docs/python/overview/linters-and-formatters.mdx
---
    title: Linters and formatters
    position: 4
---

How to activate and use the Python linters and formatters bundled with Pants.

---

[block:api-header]
{
  "title": "Activating linters and formatters"
}
[/block]
Linter/formatter support is implemented in separate [backends](doc:enabling-backends) so that they are easy to opt in to individually:
[block:parameters]
{
  "data": {
    "h-0": "Backend",
    "h-1": "Tool",
    "0-0": "`pants.backend.python.lint.bandit`",
    "0-1": "[Bandit](https://bandit.readthedocs.io/en/latest/): security linter",
    "1-0": "`pants.backend.python.lint.black`",
    "1-1": "[Black](https://black.readthedocs.io/en/stable/): code formatter",
    "2-0": "`pants.backend.python.lint.docformatter`",
    "2-1": "[Docformatter](https://pypi.org/project/docformatter/): docstring formatter",
    "3-0": "`pants.backend.python.lint.flake8`",
    "3-1": "[Flake8](https://flake8.pycqa.org/en/latest/): style and bug linter",
    "4-0": "`pants.backend.python.lint.isort`",
    "4-1": "[isort](https://readthedocs.org/projects/isort/): import statement formatter",
    "5-0": "`pants.backend.python.lint.pylint`",
    "5-1": "[Pylint](https://www.pylint.org/): style and bug linter"
  },
  "cols": 2,
  "rows": 6
}
[/block]
To enable, add the appropriate backends in `pants.toml`:
[block:code]
{
  "codes": [
    {
      "code": "[GLOBAL]\n...\nbackend_packages = [\n  'pants.backend.python',\n  'pants.backend.python.lint.black',\n  'pants.backend.python.lint.isort',\n]",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]
You should now be able to run `./pants lint`, and possibly `./pants fmt`:

```
$ ./pants lint src/py/project.py
17:54:32.51 [INFO] Completed: lint - Flake8 succeeded.
17:54:32.70 [INFO] Completed: lint - Black succeeded.
All done! ✨ 🍰 ✨
1 file would be left unchanged.

17:54:33.91 [INFO] Completed: lint - isort succeeded.

✓ Black succeeded.
✓ Flake8 succeeded.
✓ isort succeeded.
```
[block:callout]
{
  "type": "info",
  "title": "How to activate MyPy",
  "body": "MyPy is run with the [typecheck goal](doc:python-typecheck-goal), rather than `lint`."
}
[/block]

[block:api-header]
{
  "title": "Configuring the tools and adding plugins"
}
[/block]
Most of the formatters and linters allow you to configure

* `--version`: the version to use.
* `--args`: any command-line arguments you want to pass to the tool.
* `--extra-requirements`: any additional libraries to install, such as any plugins.
* `--config`: path to a config file; used if the file is in a non-standard location such that it cannot be auto-discovered.

For example:
[block:code]
{
  "codes": [
    {
      "code": "[docformatter]\nargs = [\"--wrap-summaries=100\", \"--wrap-descriptions=100\"]\n\n[flake8]\n# Load a config file in a non-standard location.\nconfig = \"build-support/.flake8\"\nversion = \"flake8==3.8.0\"\n# Add a Flake8 plugin:\nextra_requirements.add = [\"flake8-2020\"]",
      "language": "toml",
      "name": "pants.toml"
    }
  ]
}
[/block]
Run `./pants help-advanced black`, `./pants help-advanced flake8`, and so on for more information.
[block:callout]
{
  "type": "info",
  "title": "Config files are normally auto-discovered",
  "body": "For tools that autodiscover config files—such as Black, isort, Flake8, and Pylint—Pants will include any relevant config files in the process's sandbox when running the tool.\n\nIf your config file is in a non-standard location, you must instead set the `--config` option, e.g. `[isort].config`. This will ensure that the config file is included in the process's sandbox and Pants will instruct the tool to load the config."
}
[/block]

[block:api-header]
{
  "title": "Skipping a formatter or linter"
}
[/block]
To temporarily skip a tool, use the `--skip` option. For example, run:

```bash
$ ./pants --black-skip --flake8-skip lint ::
```

You can also skip on a per-target basis, which can be useful for incrementally adopting new tools. For example:
[block:code]
{
  "codes": [
    {
      "code": "# Skip Black and Flake8 for all the non-test files in this folder.\npython_library(skip_black=True, skip_flake8=True)\n\n# Skip isort for all the test files in this folder.\npython_tests(name=\"tests\", skip_isort=True)",
      "language": "python",
      "name": "project/BUILD"
    }
  ]
}
[/block]
When you run `./pants fmt ::` and `./pants lint ::`, Pants will ignore any files belonging to skipped targets.
[block:api-header]
{
  "title": "Tip: only run over changed files"
}
[/block]
With formatters and linters, there is usually no need to rerun on files that have not changed.

Use the option `--changed-since` to get much better performance, like this:

```bash
$ ./pants --changed-since=HEAD fmt
```

or

```bash
$ ./pants --changed-since=main lint
```

Pants will find which files have changed and only run over those files. See [Advanced target selection](doc:advanced-target-selection) for more information.
[block:api-header]
{
  "title": "Tips for specific tools"
}
[/block]
### Bandit and Flake8: report files

Flake8 and Bandit can both generate report files saved to disk. 

For Pants to properly preserve the reports, instruct both tools to write to the `reports/` folder by updating their config files or `--flake8-args` and `--bandit-args`. For example, in your `pants.toml`:

```toml
[bandit]
args = ["--output=reports/report.txt"]

[flake8]
args = ["----output-file=reports/report.txt"]
```

Pants will copy all reports into the folder `dist/lint/<linter_name>`.

### Pylint: how to add first-party plugins

Run `./pants help-advanced pylint` for instructions to add plugins written by you with the `--pylint-source-plugins` option.

If you want to write first-party plugins for other linters like Flake8, let us know on [Slack](doc:getting-help).

### Bandit: less verbose logging

Bandit output can be extremely verbose, including on successful runs. You may want to use its `--quiet` option, which will turn off output for successful runs but keep it for failures. 

For example, you can set this in your `pants.toml`:

```toml
[bandit]
args = ["--quiet"]
```

### isort: possible issues with its import classifier algorithm

Some Pants users had to explicitly set `default_section = "THIRDPARTY"` to get iSort 5 to correctly classify their first-party imports, even though this is the default value.

They report that this config works for them:

```toml
# pyproject.toml
[tool.isort]
known_first_party = ["my_org"]
default_section = "THIRDPARTY"
```

You may also want to try downgrading to iSort 4.x by setting `version = "isort>=4.6,<5"` in the `[isort]` options scope.